app/assets/stylesheets/app.scss
@import 'settings';

html, body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
}

header {
  flex-shrink: 0;
}

#content {
  flex: 1 0 auto;
  padding: 1em;
}

#footer {
  flex-shrink: 0;
  padding: 0 1em;
}

.grid-container {
  header {
    .top-bar {
      .devise-dropdown-list-button {
        background: #fefefe;
        color: #4E2A84;
        display: block;
        width: 100%;
        text-align: left;
        font-size: 1rem;
        transition: 0s;
          &:hover {
            background: none;
            color: #4E2A84;
          }
      }

      .devise-login-button {
        background: #fefefe;
        color: #4E2A84;
        font-size: 1rem;
          &:hover {
            background: #fefefe;
            color: #4E2A84;
          }
      }
    }

    .top-bar-left {
      .home {
        font-weight: bold;
      }
    }

    .top-bar-right {
      ul.dropdown.menu {
        li.is-dropdown-submenu-parent {
          background-color: #FFF;
          ul.is-dropdown-submenu {
            background-color: #FFF;
            li {
              border-bottom: 1px solid #cacaca;
              &:hover {
                background-color: #F8F8F8;
              }
              &:last-of-type {
                border-bottom: 0px;
              }
            }
          }
        }
      }
    }
  }

  main {
    .callout {
      height: fit-content;
      width: 100%;
      a {
        text-decoration: underline;
      }
    }
    #submenu {
      background: none;
      display: flex;
      align-items: start;
      padding: 0;
      .menu {
        background: none;
        li.menu-text {
          color: #646464;
          padding-left: 0;
          padding-right: 0;
        }
        a:hover {
          text-decoration: underline;
        }
      }
      .top-bar-left {
        ul.menu {
          li:first-of-type {
            padding-left: 0rem;
            a {
              padding-left: 0rem;
            }
          }
        }
        form {
          margin-left: 1em;
          padding: 0;
        }
      }
      .top-bar-right {
        .menu {
          input {
            margin: 0;
          }
        }
        .reset {
          .button {
            margin-bottom: 0;
            padding-bottom: 0;
          }
        }
      }
    }
    .menu.simple {
      margin: 1rem 0;
    }

    // Edit
    #grant-state {
      font-weight: bold;
      padding-top: 0.6rem;
      .button.current {
        &:hover {
          cursor: default;
        }
      }
      .button.warning {
        &:hover a {
          color: $white;
        }
      }
    }
    #grant-info .tabs-title {
      &.is-active {
        background-color: #e6e6e6;
      }
    }
    p {
      a {
        &:hover { text-decoration: underline 1px solid; }
      }
    }
  }

  footer {
    background-color: #E6E6E6;
    color: #555;
    font-size: .85em;
    margin-top: 1.5em;
    padding: 1em;
    width: 100%;
    #logos {
      .cell {
        padding: 1em 2em;
      }
    }
  }
}

th,
#turbo-table .header {
  background-color: $table-head-background;
  font-size: .85em;
  font-weight: bold;
  text-align: left;
  padding: .25em 0;
  vertical-align: bottom;
}

td,
#turbo-table .row .columns {
  vertical-align: top;
  ul.menu a {
    padding-top: 0.25em;
  }
}

// submission labels contain paragraphs
//   see: grant_submission_responses.scss
main:not(.submissions) label.required-true:after {
  content: ' *';
  font-size: 1.15em;
  color: red;
}

.field_with_errors {
  input, select, textarea {
    border: 1px solid #cc4b37;
    box-shadow: 0 0 2px #cc4b37;
  }
}

trix-editor + p.help-text {
  margin: .25em;
}

.pagy-header {
  margin: .75em 0em;
}

.small {
  font-size: .85em;
}

.not-allowed {
  cursor: not-allowed;
}

// Related to Foundation tabs highlighting
.tabs-content {
  border: 0px !important;
}

a.icon-24px {
  position: relative;
  bottom: 2px;
}

// grant header
h1#grant-name {
  font-size: 1.25em;
  font-weight: bold;
  line-height: 1em;
  a {
    color: $black;
  }
}

h1#grant-home,
h2#section {
  font-size: 1.65em;
  font-weight: normal;
  a {
    color: $black;
  }
}

// grant dates
#grant-dates,
#grant-contacts {
  .card-divider {
    padding: .5rem 1rem;
  }
  .card-section {
    padding: 0.5rem 1rem;
  }
  dl {
    dt {
      font-size: .95rem;
      font-weight: bold;
      margin-bottom: 0;
    }
    dd {
      margin-top: 0;
    }
    hr {
      margin: .5rem;
    }
  }
}

#turbo-table {
  border: $table-border;
  .header {
    .cell {
      font-size: .85em;
      margin-bottom: 0em;
    }
  }

  .columns {
    border-bottom: $table-border;
    padding: $table-padding;
  }

  .turbo-row:nth-of-type(even) {
    background-color: #F1F1F1;
  }
}

.ts-wrapper {
  height: 2.4375rem;
  background-color: #FEFEFE;
  ::placeholder {
    color: #000;
  }
  &.single {
    .ts-control {
      box-shadow: none;
      background-color: #FEFEFE;
      background-image: none;
      border-radius: 0;
      font-size: 1em;
    }
  }

  .ts-dropdown {
    color: #0A0A0A;
    font-size: 1em;
    .ts-dropdown-content {
      font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
    }
    .active {
      border: none;
      background: #F9F9F9;
      border-radius: 0;
      color: #0A0A0A;
    }
  }
}

